<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_discover_the_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/discover_the_best_furniture"
            android:textColor="@color/color_primary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/categories_title"
            app:layout_constraintEnd_toStartOf="@+id/materialCardView"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                android:src="@drawable/orland_schuzo" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/categories_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/categories"
            android:textColor="@color/color_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialCardView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories_title"
            tools:itemCount="10"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/categories_item"
            tools:orientation="horizontal"
            tools:scrollbars="vertical" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/furnitures_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories_recycler_view"
            tools:itemCount="10"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/main_showcase_item"
            tools:orientation="horizontal"
            tools:scrollbars="vertical" />

        <TextView
            android:id="@+id/best_seller_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/best_sellers"
            android:textColor="@color/color_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/furnitures_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/best_seller_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/best_seller_title"
            tools:itemCount="10"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/horizontal_product_item"
            tools:orientation="horizontal"
            tools:scrollbars="vertical" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>